--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
 
     <section class="slider_section position-relative">
       <div class="slider_bg_box">
-        <img src="images/anu.jpg" alt="" />
+        <img src="images/anubg.jpg" alt="" />
       </div>
       <div class="slider_bg"></div>
       <div class="container">
